# qucs

./: cmakeFaq.md
cli/: main.cpp
cmake/: CMakeLists.txt
include/: c_comand.h  command.h  data.h  element.h  geometry.h  io_trace.h  l_dispatcher.h  object.h  qt_compat.h  qucs_defines.h  simulator.h  symbol.h  u_lang.h
legacy/: CMakeLists.txt  MakeList  component.cpp  libcomp.cpp  marker.h  rectdiagram.cpp  schematic_lang.cpp
legacy/components/: CMakeLists.txt  MakeList  ampere_ac.cpp  ampere_dc.cpp  ampere_noise.cpp  component.cpp  component.h  componentdialog.cpp  componentdialog.h  equation.cpp  gatecomponent.cpp  iexp.cpp  ifile.cpp  ipulse.cpp  irect.cpp  source_ac.cpp  vexp.cpp  volt_ac.cpp  volt_dc.cpp  volt_noise.cpp  vpulse.cpp  vrect.cpp
legacy/paintings/: arrow.cpp  ellipse.cpp  ellipsearc.cpp  graphicline.cpp  graphictext.cpp  graphictext.h  id_text.cpp  portsymbol.cpp  rectangle.cpp
legacy/qucsator/: dat.h  qucsator.h
main/: main.cpp
plugins/diagrams/: CMakeLists.txt  CurveDiagram.cpp  MakeList  PSDiagram.cpp  PhasorDiagram.cpp  PolarDiagram.cpp  Rect3DDiagram.cpp  RectDiagram.cpp  RectDiagram.h  SmithDiagram.cpp  TimingDiagram.cpp  TruthDiagram.cpp  TruthDiagram.h  Waveac.cpp  Waveac.h  configure.cmake
qucs/src/: qucs.h  (+4 more)
src/: MakeList  cmdeltdlg.cpp  cmdeltdlg.h  diagram.cpp  diagram.h  dispatcher.h  element.cpp  element_graphics.cpp  element_graphics.h  geometry.cpp  marker.cpp  mouseaction.cpp  mouseactions.cpp  mouseactions.h  mouseactionschematic.cpp  mouseactionschematic.h  mouseactionshandler.cpp  mouseactionshandler.h  nodemap.cpp  nodemap.h  object.cpp  painting.h  place.cpp  qucs.cpp  qucs.h  qucs_actions.cpp  qucsdoc.cpp  qucsdoc.h  schematic.cpp  schematic_action.cpp  schematic_action.h  schematic_dialog.cpp  schematic_doc.cpp  schematic_doc.h  schematic_edit.cpp  schematic_edit.h  schematic_element.cpp  schematic_model.cpp  schematic_scene.cpp  schematic_scene.h  (+11 more)
tests/: element.cpp  wire0.cpp  wire1.cpp
(+17 files in other folders)
